gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/systemvariables_deprecation.d
version https://git-lfs.github.com/spec/v1
oid sha256:1e512a25216ba9172b5d70b8b2aa6252a5156c5d8e042d6ce099af4f49c215fd
size 759
